# rossum-mcp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CORRECT_LINE_ITEMS_USAGE.md  Dockerfile  Makefile  README.md  codecov.yml  constraints.txt  docker-compose.yml  env.sample  index.js  mypy.ini  package-lock.json  package.json  pyproject.toml  revenue.html  ruff.toml  server.py
.claude/: daily-suggestion-log.md
.github/: pull_request_template.md
deployments/: README.md
examples/: CREATE_SAS_INBOX.md  DATA_INSIGHT.md  EXPLAIN_HOOKS.md  EXPLAIN_RULES_AND_ACTIONS.md  (+6 more)
rossum-agent/: CHANGELOG.md  README.md  pyproject.toml
rossum-agent-client/: CHANGELOG.md  README.md  openapi.json  pyproject.toml
rossum-agent-client/rossum_agent_client/: __init__.py  cli.py  client.py  exceptions.py
rossum-agent-client/rossum_agent_client/models/: __init__.py  requests.py  responses.py
rossum-agent-client/tests/: __init__.py  conftest.py  test_async_client.py  test_cli.py  test_client.py  test_models.py
rossum-agent/rossum_agent/: __init__.py  agent.py  agent_logging.py  api.py  app.py  app_llm_response_formatting.py  async_tools.py  bedrock_client.py  beep_sound.py  deploy_tools.py  example_prompts.py  file_system_tools.py  hook_analysis_tools.py  instructions.py  internal_tools.py  main.py  mcp_tools.py  plot_tools.py  redis_storage.py  render_modules.py  rossum_mcp_integration.py  streamlit_app.py  url_context.py  user_detection.py  utils.py
rossum-agent/rossum_agent/agent/: __init__.py  core.py  memory.py  models.py  request_classifier.py  skills.py  types.py
rossum-agent/rossum_agent/agent/subagents/: __init__.py  factory.py  registry.py  runner.py  types.py
rossum-agent/rossum_agent/api/: __init__.py  app.py  cli.py  dependencies.py  main.py  routes.py  serialization.py  session.py  websocket.py
rossum-agent/rossum_agent/api/models/: __init__.py  chat.py  files.py  schemas.py  steps.py  websocket.py
rossum-agent/rossum_agent/api/routes/: chats.py  files.py  health.py  messages.py
rossum-agent/rossum_agent/api/services/: agent_service.py  chat_service.py  file_service.py
rossum-agent/rossum_agent/api/static/: app.js  index.html  styles.css
rossum-agent/rossum_agent/prompts/: __init__.py  base_prompt.py  code_agent.yaml  system_prompt.py
rossum-agent/rossum_agent/prompts/subagents/: __init__.py  document_analyzer.py  hook_debugger.py  rule_optimizer.py  schema_expert.py
rossum-agent/rossum_agent/skills/: hook-debugging.md  organization-setup.md  rossum-deployment.md  schema-patching.md  schema-pruning.md  ui-settings.md
rossum-agent/rossum_agent/static/: index.html
rossum-agent/rossum_agent/streamlit_app/: __init__.py  app.py  cli.py  render_modules.py  response_formatting.py
rossum-agent/rossum_agent/tools/: __init__.py  core.py  deploy.py  dynamic_tools.py  file_tools.py  formula.py  hook_debug.py  knowledge_base.py  skills.py  spawn_mcp.py
rossum-agent/rossum_agent/tools/subagents/: __init__.py  base.py  hook_debug.py  knowledge_base.py  mcp_helpers.py  schema_patching.py
rossum-agent/rossum_agent/types/: api.d.ts  client.ts
rossum-agent/tests/: conftest.py  test_agent.py  test_agent_logging.py  test_app_llm_response_formatting.py  test_async_tools.py  test_bedrock_client.py  test_beep_sound.py  test_deploy_tools.py  test_dynamic_tools.py  test_file_system_tools.py  test_internal_tools.py  test_mcp_tools.py  test_plotting_tool.py  test_redis_storage.py  test_request_classifier.py  test_rossum_mcp_integration.py  test_skills.py  test_smoke.py  test_subagents.py  test_url_context.py  test_user_detection.py  test_utils.py
rossum-agent/tests/agent/: __init__.py  test_context_propagation.py  test_core.py  test_memory.py  test_models.py  test_request_classifier.py  test_skills.py  test_types.py
rossum-agent/tests/api/: conftest.py  test_agent_service.py  test_chat_service.py  test_cli.py  test_dependencies.py  test_document_upload.py  test_file_routes.py  test_file_service.py  test_main.py  test_message_routes.py  test_routes.py  test_schemas.py
rossum-agent/tests/streamlit_app/: __init__.py  test_app.py  test_cli.py  test_render_modules.py  test_response_formatting.py
rossum-agent/tests/tools/: __init__.py  test_base.py  test_core.py  test_deploy.py  test_file_tools.py  test_formula.py  test_hook_debug.py  test_init.py  test_knowledge_base.py  test_skills.py  test_spawn_mcp.py
rossum-agent/tests/tools/subagents/: __init__.py  test_base.py  test_hook_debug.py  test_knowledge_base.py  test_mcp_helpers.py  test_schema_patching.py
rossum-deploy/: CHANGELOG.md  README.md  pyproject.toml
rossum-deploy/rossum_deploy/: __init__.py  constants.py  models.py  workspace.py
rossum-deploy/tests/: conftest.py  test_models.py  test_workspace.py
rossum-mcp/: CHANGELOG.md  LICENSE  README.md  TOOLS.md  pyproject.toml
rossum-mcp/rossum_mcp/: __init__.py  logging_config.py  server.py
rossum-mcp/rossum_mcp/handlers/: __init__.py  annotations.py  base.py  document_relations.py  engines.py  hooks.py  relations.py  rules.py  schemas.py  workspaces.py
rossum-mcp/rossum_mcp/tools/: __init__.py  annotations.py  base.py  catalog.py  discovery.py  document_relations.py  email_templates.py  engines.py  hooks.py  queues.py  relations.py  rules.py  schemas.py  users.py  workspaces.py
rossum-mcp/tests/: conftest.py  test_catalog.py  test_logging_config.py  test_server.py
rossum-mcp/tests/tools/: __init__.py  conftest.py  test_annotations.py  test_base.py  test_document_relations.py  test_email_templates.py  test_engines.py  test_hooks.py  test_queues.py  test_relations.py  test_rules.py  test_schemas.py  test_users.py  test_workspaces.py
rossum_agent/: README.md  agent.py  agent_logging.py  app.py  example_prompts.py  file_system_tools.py  hook_analysis_tools.py  instructions.py  internal_tools.py  main.py  plot_tools.py  pyproject.toml  utils.py
rossum_mcp/: README.md  pyproject.toml  server.py  tools.py
rossum_mcp/handlers/: __init__.py  annotations.py  engines.py  hooks.py  queues.py  rules.py  schemas.py  workspaces.py
(+114 files in other folders)
