# Workspace pyproject.toml for both rossum-mcp and rossum-agent
# This file allows installing both packages together during development

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-workspace"
version = "1.0.0"
description = "Workspace for rossum-mcp and rossum-agent packages"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "rossum", "document-processing", "agent", "ai"]
dependencies = [
    "mcp>=1.0.0",
    "rossum-api>=3.6.1",
]

[project.optional-dependencies]
# Agent dependencies
agent = [
    "elasticsearch>=9.0",
    "matplotlib>=3.10",
    "plotly>=6.0",
    "python-dotenv",
    "pyyaml>=6.0",
    "requests>=2.32",
    "seaborn>=0.13.2",
    "smolagents[mcp,litellm]>=1.0.0",
]
bedrock = [
    "boto3>=1.0"
]
# Documentation
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]
# MCP server dependencies
mcp = [
    "mcp>=1.0.0",
]
# Streamlit UI
streamlit = [
    "streamlit>=1.28.0",
]
# Testing
tests = [
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
# All dependencies
all = [
    "boto3>=1.0",
    "coverage>=7.0.0",
    "elasticsearch>=9.0",
    "matplotlib>=3.10",
    "mcp>=1.0.0",
    "myst-parser>=2.0.0",
    "plotly>=6.0",
    "python-dotenv",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "rossum-api>=3.6.1",
    "seaborn>=0.13.2",
    "smolagents[mcp,litellm]>=1.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
    "streamlit>=1.28.0",
]

[tool.setuptools]
packages = [
    "rossum_mcp",
    "rossum_agent"
]

[project.scripts]
rossum-mcp = "rossum_mcp.server:main"

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests that test individual functions/methods in isolation",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
