# Workspace pyproject.toml for both rossum-mcp and rossum-agent
# This file allows installing both packages together during development

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-workspace"
version = "1.0.0"
description = "Workspace for rossum-mcp and rossum-agent packages"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dan Stancl (Rossum AI)", email = "daniel.stancl@gmail.com"}
]
keywords = ["mcp", "rossum", "document-processing", "agent", "ai"]
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "rossum-api>=3.7.0",
]

[project.optional-dependencies]
# Agent dependencies
agent = [
    "anthropic>=0.75.0",
    "boto3>=1.0",
    "cryptography>=41.0",
    "elasticsearch>=9.0",
    "fastmcp>=2.13.0",
    "jinja2>=3.0",
    "PyJWT>=2.8",
    "python-dotenv",
    "pyyaml>=6.0",
    "requests>=2.32",
]
# Agent API server
api = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "redis>=7.0.0",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]
# Documentation
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]
# MCP server dependencies
mcp = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "elasticsearch>=9.0",
]
# Streamlit UI
streamlit = [

    "streamlit>=1.37.0",
    "redis>=7.0.0",
]
# Testing
tests = [
    "elasticsearch>=9.0",
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "streamlit>=1.37.0",
]
# All dependencies
all = [
    "anthropic>=0.75.0",
    "boto3>=1.0",
    "coverage>=7.0.0",
    "cryptography>=41.0",
    "fastapi>=0.115.0",
    "fastmcp>=2.13.0",
    "httpx>=0.27.0",
    "jinja2>=3.0",
    "mcp>=1.0.0",
    "myst-parser>=2.0.0",
    "PyJWT>=2.8",
    "python-dotenv",
    "python-multipart>=0.0.12",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0",
    "redis>=7.0.0",
    "requests>=2.32",
    "rossum-api>=3.7.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
    "sse-starlette>=2.0.0",
    "streamlit>=1.37.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["rossum-mcp", "rossum-agent"]
include = ["rossum_mcp*", "rossum_agent*"]

[project.scripts]
rossum-mcp = "rossum_mcp.server:main"
rossum-agent = "rossum_agent.streamlit_app:main"
rossum-agent-api = "rossum_agent.api.main:main"

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests that test individual functions/methods in isolation",
]
testpaths = ["rossum-mcp/tests", "rossum-agent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.package-data]
rossum_agent = ["assets/*.png"]

[tool.uv.sources]
rossum-api = { git = "https://github.com/stancld/rossum-api.git", rev = "ds-feat-hook-logs"}
