[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-agent"
version = "0.1.6"
description = "AI agent toolkit for Rossum: document workflows conversationally, debug pipelines automatically, and enable agentic configuration of intelligent document processing."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dan Stancl (Rossum AI)", email = "daniel.stancl@gmail.com"}
]
keywords = ["agent", "rossum", "document-processing", "ai"]
dependencies = [
    "boto3>=1.0",
    "cryptography>=41.0",
    "elasticsearch>=9.0",
    "matplotlib>=3.10",
    "plotly>=6.0",
    "PyJWT>=2.8",
    "pyyaml>=6.0",
    "python-dotenv",
    "requests>=2.32",
    "rossum-api>=3.6.1",
    "rossum-mcp>0.1.0",
    "seaborn>=0.13.2",
    "smolagents[mcp,litellm]>=1.0.0",
]

[project.scripts]
rossum-agent = "rossum_agent.streamlit_app:main"

[project.optional-dependencies]
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]
streamlit = [
    "pyperclip>=1.0",
    "redis>=7.0.0",
    "streamlit>=1.28.0",
]
tests = [
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "redis>=7.0.0",
    "streamlit>=1.28.0",
]
all = [
    "coverage>=7.0.0",
    "myst-parser>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "redis>=7.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
    "streamlit>=1.28.0",
]

[tool.uv.sources]
rossum-api = { git = "https://github.com/stancld/rossum-api.git", rev = "ds-feat-schema-content" }
rossum-mcp = { git = "https://github.com/stancld/rossum-mcp.git", tag = "rossum-mcp-v0.1.0post", subdirectory = "rossum-mcp" }

[tool.setuptools.package-data]
rossum_agent = ["assets/*.png"]
