[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-agent"
version = "0.3.0dev"
description = "AI agent toolkit for Rossum: document workflows conversationally, debug pipelines automatically, and enable agentic configuration of intelligent document processing."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dan Stancl (Rossum AI)", email = "daniel.stancl@gmail.com"}
]
keywords = ["agent", "rossum", "document-processing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.75.0",
    "boto3>=1.0",
    "cryptography>=41.0",
    "ddgs>=9.9.0",
    "fastmcp>=2.13.0",
    "httpx>=0.27.0",
    "jinja2>=3.0",
    "PyJWT>=2.8",
    "pyyaml>=6.0",
    "python-dotenv",
    "requests>=2.32",
    "rossum-api>=3.8.0",
    "rossum-deploy>=0.1.0",
    "rossum-mcp>=0.3.2",
]

[project.scripts]
rossum-agent = "rossum_agent.streamlit_app.cli:main"
rossum-agent-api = "rossum_agent.api.main:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "pydantic>2.0.0",
    "python-multipart>=0.0.12",
    "redis>=7.0.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]
streamlit = [
    "pyperclip>=1.0",
    "redis>=7.0.0",
    "streamlit>=1.28.0",
]
tests = [
    "coverage>=7.0.0",
    "httpx>=0.27.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "redis>=7.0.0",
    "streamlit>=1.28.0",
]
all = [
    "coverage>=7.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "myst-parser>=2.0.0",
    "pydantic>2.0.0",
    "pyperclip>=1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "python-multipart>=0.0.12",
    "redis>=7.0.0",
    "slowapi>=0.1.9",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
    "sse-starlette>=2.0.0",
    "streamlit>=1.28.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
rossum-deploy = { git = "https://github.com/stancld/rossum-agents.git", subdirectory = "rossum-deploy" }
rossum-mcp = { git = "https://github.com/stancld/rossum-agents.git", subdirectory = "rossum-mcp" }

[tool.pytest.ini_options]
markers = [
    "smoke: smoke tests requiring real API credentials (ROSSUM_API_TOKEN, ROSSUM_API_BASE_URL)"
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["rossum_mcp*", "rossum_agent*", "rossum_deploy*"]

[tool.setuptools.package-data]
rossum_agent = ["assets/*.png", "skills/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
