[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-deploy"
version = "0.2.0dev"
description = "Minimalistic pull/diff/push deployment for Rossum configurations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dan Stancl (Rossum AI)", email = "daniel.stancl@gmail.com"}
]
keywords = ["rossum", "deployment", "configuration-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "rossum-api>=3.7.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rossum_deploy*"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
]
testpaths = ["tests"]

[tool.uv.sources]
rossum-api = { git = "https://github.com/stancld/rossum-api.git", rev = "ds-hooks-fix"}
