[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-mcp"
version = "0.3.6dev0"
description = "MCP server for AI-powered Rossum orchestration: document workflows, debug pipelines automatically, and configure intelligent document processing through natural language."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dan Stancl (Rossum AI)", email = "daniel.stancl@gmail.com"}
]
keywords = ["mcp", "rossum", "document-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>2.0.0",
    "pydantic>2.0.0",
    "rossum-api>=3.7.0",
]

[project.scripts]
rossum-mcp = "rossum_mcp.server:main"

[project.optional-dependencies]
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]
tests = [
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "redis>=7.0.0",
]
all = [
    "coverage>=7.0.0",
    "fastmcp>=1.0.0",
    "myst-parser>=2.0.0",
    "pydantic>2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "redis>=7.0.0",
    "rossum-api>=3.7.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rossum_mcp*"]

[tool.uv.sources]
rossum-api = { git = "https://github.com/stancld/rossum-api.git", rev = "ds-feat-hook-logs"}

[tool.coverage.run]
omit = ["rossum_mcp/server.py"]
