[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-mcp"
version = "0.1.0"
description = "MCP server for Rossum SDK interactions."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "rossum", "document-processing"]
dependencies = [
    "mcp>=1.0.0",
    "rossum-api>3.5.2",
]

[project.optional-dependencies]
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]
tests = [
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "coverage>=7.0.0",
    "mcp>=1.0.0",
    "myst-parser>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "rossum-api>3.5.2",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=2.0.0",
]
